despliegue/main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "6.28.0"
    }
  }
}

provider "aws" {
  region = var.region
}

#################################
# GRUPOS DE SEGURIDAD Y REGLAS
#################################

#GRUPOS

resource "aws_security_group" "bastion" {
  name        = "bastion"
  description = "Grupo de seguridad para bastion"
}

resource "aws_security_group" "frontend" {
  name        = "frontend"
  description = "Grupo de seguridad para frontend"
}

resource "aws_security_group" "api" {
  name        = "api"
  description = "Grupo de seguridad para api"
}

resource "aws_security_group" "database" {
  name        = "database"
  description = "Grupo de seguridad para base de datos"
}


#REGLAS BASTION

resource "aws_vpc_security_group_ingress_rule" "bastion_ssh" {
  security_group_id = aws_security_group.bastion.id
  ip_protocol       = "tcp"
  from_port         = 22
  to_port           = 22
  cidr_ipv4         = "0.0.0.0/0"
}

resource "aws_vpc_security_group_egress_rule" "bastion_egress" {
  security_group_id = aws_security_group.bastion.id
  ip_protocol       = "-1"
  cidr_ipv4         = "0.0.0.0/0"
}

#REGLAS FRONTEND

resource "aws_vpc_security_group_ingress_rule" "frontend_ssh" {
  security_group_id            = aws_security_group.frontend.id
  ip_protocol                  = "tcp"
  from_port                    = 22
  to_port                      = 22
  referenced_security_group_id = aws_security_group.bastion.id
}

resource "aws_vpc_security_group_ingress_rule" "frontend_http" {
  security_group_id = aws_security_group.frontend.id
  ip_protocol       = "tcp"
  from_port         = 80
  to_port           = 80
  cidr_ipv4         = "0.0.0.0/0"
}

resource "aws_vpc_security_group_ingress_rule" "frontend_https" {
  security_group_id = aws_security_group.frontend.id
  ip_protocol       = "tcp"
  from_port         = 443
  to_port           = 443
  cidr_ipv4         = "0.0.0.0/0"
}

resource "aws_vpc_security_group_egress_rule" "frontend_egress" {
  security_group_id = aws_security_group.frontend.id
  ip_protocol       = "-1"
  cidr_ipv4         = "0.0.0.0/0"
}

#REGLAS API

resource "aws_vpc_security_group_ingress_rule" "api_ssh" {
  security_group_id            = aws_security_group.api.id
  ip_protocol                  = "tcp"
  from_port                    = 22
  to_port                      = 22
  referenced_security_group_id = aws_security_group.bastion.id
}

resource "aws_vpc_security_group_ingress_rule" "api_http" {
  security_group_id            = aws_security_group.api.id
  ip_protocol                  = "tcp"
  from_port                    = 80
  to_port                      = 80
  referenced_security_group_id = aws_security_group.frontend.id
}

resource "aws_vpc_security_group_egress_rule" "api_egress" {
  security_group_id = aws_security_group.api.id
  ip_protocol       = "-1"
  cidr_ipv4         = "0.0.0.0/0"
}

# REGLAS DATABASE

resource "aws_vpc_security_group_ingress_rule" "database_ssh" {
  security_group_id            = aws_security_group.database.id
  ip_protocol                  = "tcp"
  from_port                    = 22
  to_port                      = 22
  referenced_security_group_id = aws_security_group.bastion.id
}

resource "aws_vpc_security_group_ingress_rule" "database_mysql" {
  security_group_id            = aws_security_group.database.id
  ip_protocol                  = "tcp"
  from_port                    = 3306
  to_port                      = 3306
  referenced_security_group_id = aws_security_group.api.id
}

resource "aws_vpc_security_group_egress_rule" "database_egress" {
  security_group_id = aws_security_group.database.id
  ip_protocol       = "-1"
  cidr_ipv4         = "0.0.0.0/0"
}

#################################
# INSTANCIAS
#################################

#BASTION

resource "aws_instance" "bastion" {
  ami                    = data.aws_ami.ubuntu.id
  instance_type          = "t2.medium"
  key_name               = var.key_name
  vpc_security_group_ids = [aws_security_group.bastion.id]
  user_data = templatefile("${path.module}/templates/bastion.sh.tftpl", {
    internal_domain = var.internal_domain
  })
  tags = { Name = "Bastion" }
}

#FRONTEND

resource "aws_instance" "frontend" {
  ami                    = data.aws_ami.ubuntu.id
  instance_type          = "t2.large"
  key_name               = var.key_name
  vpc_security_group_ids = [aws_security_group.frontend.id]
  user_data = templatefile("${path.module}/templates/frontend.sh.tftpl", {
    public_domain   = var.public_domain
    internal_domain = var.internal_domain
  })
  tags = { Name = "Frontend" }
}

#API

resource "aws_instance" "api" {
  ami                    = data.aws_ami.ubuntu.id
  instance_type          = "t2.large"
  key_name               = var.key_name
  vpc_security_group_ids = [aws_security_group.api.id]
  user_data = templatefile("${path.module}/templates/api.sh.tftpl", {
    internal_domain = var.internal_domain
  })
  tags = { Name = "API" }
}

# DATABASE

resource "aws_instance" "database" {
  ami                    = data.aws_ami.ubuntu.id
  instance_type          = "t2.medium"
  key_name               = var.key_name
  vpc_security_group_ids = [aws_security_group.database.id]
  user_data = templatefile("${path.module}/templates/database.sh.tftpl", {
    internal_domain = var.internal_domain
  })
  tags = { Name = "Database" }
}


#################################
# IP ELÁSTICA (BASTION + FRONTEND)
#################################

resource "aws_eip" "bastion" {
  domain   = "vpc"
  instance = aws_instance.bastion.id
  tags     = { Name = "Bastion-EIP" }
}

resource "aws_eip" "frontend" {
  domain   = "vpc"
  instance = aws_instance.frontend.id
  tags     = { Name = "Frontend-EIP" }
}

#################################
# ZONA DNS PRIVADA ROUTE53
# Resuelve solo dentro de la VPC (comunicación interna entre EC2)
#################################

resource "aws_route53_zone" "zona_privada" {
  name = var.internal_domain

  vpc {
    vpc_id = data.aws_vpc.default.id
  }
}

resource "aws_route53_record" "bastion" {
  zone_id = aws_route53_zone.zona_privada.zone_id
  name    = "bastion.${var.internal_domain}"
  type    = "A"
  ttl     = 300
  records = [aws_instance.bastion.private_ip]
}

resource "aws_route53_record" "frontend" {
  zone_id = aws_route53_zone.zona_privada.zone_id
  name    = "frontend.${var.internal_domain}"
  type    = "A"
  ttl     = 300
  records = [aws_instance.frontend.private_ip]
}

resource "aws_route53_record" "api" {
  zone_id = aws_route53_zone.zona_privada.zone_id
  name    = "api.${var.internal_domain}"
  type    = "A"
  ttl     = 300
  records = [aws_instance.api.private_ip]
}

resource "aws_route53_record" "database" {
  zone_id = aws_route53_zone.zona_privada.zone_id
  name    = "database.${var.internal_domain}"
  type    = "A"
  ttl     = 300
  records = [aws_instance.database.private_ip]
}
